test/functions/deitz/default/test_default3-error.good
test_default3-error.chpl:17: error: ambiguous call 'foo'
note: candidates are:
test_default3-error.chpl:1: foo
test_default3-error.chpl:5: foo
fail: program does not type
